Кнопка - Нужна консультация

--- a/src/widgets/support-chat/components/right-support-window/right-support-window.module.scss
+++ b/src/widgets/support-chat/components/right-support-window/right-support-window.module.scss
@@ -8,3 +8,13 @@
 .rightSupportChatWindow {
     width: 597px;
 }
+
+.rightWindowHeader {
+    padding: 17px 23px 0 0;
+    display: flex;
+    justify-content: flex-end;
+
+    .closeButton {
+        cursor: pointer;
+    }
+}
