--- a/src/widgets/support-chat/components/right-support-window/right-support-window.module.scss
+++ b/src/widgets/support-chat/components/right-support-window/right-support-window.module.scss
@@ -18,3 +18,36 @@
         cursor: pointer;
     }
 }
+
+.answersList {
+    padding-left: 25px;
+    display: flex;
+    align-items: center;
+    gap: 14px;
+    flex-wrap: wrap;
+}
+
+.answerItem {
+    padding: 12px 15px;
+    border-radius: 18px;
+
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 87.023%; /* 15.664px */
+    letter-spacing: -0.45px;
+
+    cursor: pointer;
+
+    &:nth-child(2n + 1) {
+        background: var(--unnamed, linear-gradient(180deg, #CCE4FF 0%, #FFF 100%));
+        border: 2px solid var(--unnamed, #013878);
+        color: var(--unnamed, #013878);
+    }
+
+    &:nth-child(2n) {
+        background: var(--unnamed, linear-gradient(180deg, #FFE5CD 0%, #FFF 100%));
+        border: 2px solid var(--unnamed, #FD7900);
+        color: var(--unnamed, #FD7900);
+    }
+}
