--- a/src/widgets/support-chat/components/left-support-window/left-support-window.module.scss
+++ b/src/widgets/support-chat/components/left-support-window/left-support-window.module.scss
@@ -7,31 +7,25 @@
 }
 
 .mainLeftWindowContent {
-    text-align: center;
-
-    .contentMainTitle {
-        max-width: 312px;
-        margin: 0 auto;
+    margin-top: 7px;
+    
+    .leftWindowLogo {
         text-align: center;
-        color: var(--unnamed, #013878);
-        text-align: center;
-        font-size: 22px;
-        font-style: normal;
-        font-weight: 600;
-        line-height: 90%; /* 19.8px */
-        letter-spacing: -0.55px;
     }
-
     .contentHelperText {
-        max-width: 346px;
+        max-width: 80%;
         margin: 0 auto;
-        margin-top: 16px;
         color: var(--unnamed, #013878);
         text-align: center;
+        font-family: Inter;
         font-size: 18px;
         font-style: normal;
         font-weight: 600;
         line-height: 105%; /* 18.9px */
         letter-spacing: -0.45px;
+        white-space: pre-wrap;
+
+        max-height: 240px;
+        overflow-y: auto;
     }
 }
