Актировал кнопку - Назад

--- a/src/widgets/support-chat/components/left-support-window/components/left-window-header/left-window-header.module.scss
+++ b/src/widgets/support-chat/components/left-support-window/components/left-window-header/left-window-header.module.scss
@@ -30,6 +30,7 @@
         display: flex;
         align-items: center;
         column-gap: 9px;
+        cursor: pointer;
 
         &__text {
             color:  #FD7900;
