--- a/src/shared/ui/MyInput/MyInput.module.scss
+++ b/src/shared/ui/MyInput/MyInput.module.scss
@@ -1,20 +1,37 @@
 @import "app/styles/exports";
 
+.myInputWrapper {
+  width: 100%;
+}
+
 .myInput {
   font-family: "Inter";
   width: 100%;
-  height: 70px;
+  height: 55px;
   border: 3px solid $blue-color;
-  border-radius: 30px;
+  border-radius: 27px;
   color: $blue-color;
   font-size: 20px;
   font-weight: 600;
   padding: 25px 25px 25px 22px;
   outline: none;
+  margin-top: 7px;
 
   &::placeholder {
+    color: $blue-color;
     opacity: 0.4;
   }
+}
+
+.inputLabel {
+    color: var(--unnamed, #013878);
+    font-family: 'Inter';
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 105%; /* 18.9px */
+    letter-spacing: -0.45px;
+    margin-left: 20px;
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1439px) {
