--- a/src/widgets/support-chat/components/legal-advice/legal-advice.module.scss
+++ b/src/widgets/support-chat/components/legal-advice/legal-advice.module.scss
@@ -6,4 +6,7 @@
     border-radius: 30px;
     border: 3px solid var(--unnamed, #013878);
     padding: 20px;
+    display: flex;
+    flex-direction: column;
+    row-gap: 12px;
 }
