--- a/src/widgets/support-chat/components/legal-advice/components/top-advice-content/top-advice-content.module.scss
+++ b/src/widgets/support-chat/components/legal-advice/components/top-advice-content/top-advice-content.module.scss
@@ -14,6 +14,7 @@
     color: var(--unnamed, #013878);
     font-weight: 600;
     margin-left: 30px;
+    // margin-top: 20px;
 
     .topLeftContentTitle {
         font-size: 22px;
@@ -30,6 +31,32 @@
     }
 }
 
+.topRightNavigationButtons {
+    display: flex;
+    align-items: center;
+    column-gap: 20px;
+    position: absolute;
+    right: 20px;
+    top: 20px;
+}
+
 .closeSvgButton {
     cursor: pointer;
+}
+
+.backToSupportChat {
+    display: flex;
+    align-items: center;
+    column-gap: 9px;
+    cursor: pointer;
+
+    &__text {
+        color: var(--unnamed, #013878);
+        font-size: 15px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 87.023%; /* 13.053px */
+        letter-spacing: -0.375px;
+        // width: 83px;
+    }
 }
