Позиция справа от окна для иконки

--- a/src/features/support-chat-button/support-chat-button.module.scss
+++ b/src/features/support-chat-button/support-chat-button.module.scss
@@ -2,7 +2,7 @@
     position: fixed;
     z-index: 11;
     bottom: 0;
-    // right: 0;
+    right: 60px;
     img {
         cursor: pointer;
     }
