--- a/src/widgets/support-chat/components/mobile-chat-version/mobile-chat-version.module.scss
+++ b/src/widgets/support-chat/components/mobile-chat-version/mobile-chat-version.module.scss
@@ -7,6 +7,10 @@
     padding-bottom: 16px;
 }
 
+.mainChatContent {
+    position: relative;
+}
+
 .blueBorder {
     position: absolute;
     top: 77px;
