--- a/src/widgets/support-chat/components/mobile-chat-version/mobile-chat-version.module.scss
+++ b/src/widgets/support-chat/components/mobile-chat-version/mobile-chat-version.module.scss
@@ -7,6 +7,25 @@
     padding-bottom: 16px;
 }
 
+.scrollContent {
+    max-height: 732px;
+    overflow-y: auto;
+}
+
+.scrollContent::-webkit-scrollbar {
+    width: 7px;
+}
+
+.scrollContent::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
+.scrollContent::-webkit-scrollbar-thumb {
+    width: 7px;
+    border-radius: 3.5px;
+    background-color: #013878;
+}
+
 .mainChatContent {
     position: relative;
 }
