убрад дизайн скролла

--- a/src/widgets/support-chat/components/mobile-chat-version/mobile-chat-version.module.scss
+++ b/src/widgets/support-chat/components/mobile-chat-version/mobile-chat-version.module.scss
@@ -14,19 +14,19 @@
     overflow-x: hidden;
 }
 
-.scrollContent::-webkit-scrollbar {
-    width: 7px;
-}
+// .scrollContent::-webkit-scrollbar {
+//     width: 7px;
+// }
 
-.scrollContent::-webkit-scrollbar-track {
-    background-color: transparent;
-}
+// .scrollContent::-webkit-scrollbar-track {
+//     background-color: transparent;
+// }
 
-.scrollContent::-webkit-scrollbar-thumb {
-    width: 7px;
-    border-radius: 3.5px;
-    background-color: #013878;
-}
+// .scrollContent::-webkit-scrollbar-thumb {
+//     width: 7px;
+//     border-radius: 3.5px;
+//     background-color: #013878;
+// }
 
 .blueBorder {
     position: absolute;
