Убираем скролл у body если открыт чат

--- a/src/features/support-chat-button/support-chat-button.module.scss
+++ b/src/features/support-chat-button/support-chat-button.module.scss
@@ -11,8 +11,8 @@
 @media screen and (max-width: 490px) {
     .botButton {
         img {
-            width: 84.317px;
-            height: 81.145px;
+            width: 120px;
+            // height: 81.145px;
         }
     }
 }
