--- a/src/widgets/support-chat/components/mobile-chat-version/mobile-chat-version.module.scss
+++ b/src/widgets/support-chat/components/mobile-chat-version/mobile-chat-version.module.scss
@@ -6,7 +6,6 @@
     border-radius: 30px;
     position: relative;
     overflow: hidden;
-    padding-bottom: 16px;
     margin: 0 15px;
 }
 
@@ -59,6 +58,7 @@
 .buttonContainer {
     display: flex;
     justify-content: center;
+    padding: 0 15px;
 }
 
 .toMobileLegalAdviceButton {
