пододвинул вправо иконку

--- a/src/features/support-chat-button/support-chat-button.module.scss
+++ b/src/features/support-chat-button/support-chat-button.module.scss
@@ -10,6 +10,7 @@
 
 @media screen and (max-width: 490px) {
     .botButton {
+        right: 15px;
         img {
             width: 120px;
             // height: 81.145px;
