--- a/src/widgets/footer/components/SupportedBy/SupportedBy.module.scss
+++ b/src/widgets/footer/components/SupportedBy/SupportedBy.module.scss
@@ -18,6 +18,7 @@
       linear-gradient(#fff 0 0);
     -webkit-mask-composite: xor;
     mask-composite: exclude;
+    z-index: 1;
   }
 
   &__logo {
@@ -32,6 +33,11 @@
     line-height: 17.4px;
     margin: 27px 0 21px 0;
   }
+}
+
+.fsi {
+  position: relative;
+  z-index: 1;
 }
 
 .mobileLogo {
