--- a/src/shared/ui/select/select.module.scss
+++ b/src/shared/ui/select/select.module.scss
@@ -11,6 +11,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    cursor: pointer;
 
     .selectedOption {
         color: #013878;
@@ -18,6 +19,14 @@
         font-weight: 600;
         line-height: 105%; 
         letter-spacing: -0.45px;
+    }
+
+    .arrow {
+        transform: rotate(-90deg);
+        transition: transform .2s;
+    }
+    .openArrow {
+        transform: rotate(0deg);
     }
 }
 
