--- a/src/widgets/support-chat/components/desktop-chat-version/components/legal-advice/components/legal-form/legal-form.module.scss
+++ b/src/widgets/support-chat/components/desktop-chat-version/components/legal-advice/components/legal-form/legal-form.module.scss
@@ -1,7 +1,7 @@
-.legalFormInputs {
+.legalAdviceForm {
     display: flex;
-    column-gap: 15px;
-    margin-bottom: 10px;
+    flex-direction: column;
+    row-gap: 10px;
 }
 
 .submitButton {
