--- a/src/widgets/support-chat/components/desktop-chat-version/components/legal-advice/components/top-advice-content/top-advice-content.module.scss
+++ b/src/widgets/support-chat/components/desktop-chat-version/components/legal-advice/components/top-advice-content/top-advice-content.module.scss
@@ -3,6 +3,7 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
+    margin-bottom: 10px;
 }
 
 .topLeftColumnContent {
