--- a/src/shared/ui/MyInput/MyInput.module.scss
+++ b/src/shared/ui/MyInput/MyInput.module.scss
@@ -59,3 +59,9 @@ textarea::-webkit-scrollbar-thumb {
     padding: 15px;
   }
 }
+
+@media screen and (max-width: 490px) {
+  .myInput {
+    border: 2px solid $blue-color;
+  }
+}
