--- a/src/entities/support-chat/legal-advice/legal-advice.module.scss
+++ b/src/entities/support-chat/legal-advice/legal-advice.module.scss
@@ -7,3 +7,11 @@
     padding: 20px;
     position: relative;
 }
+
+@media screen and (max-width: 490px) {
+    .adviceContent {
+        margin: 0 15px;
+        padding: 15px;
+        border: 3px solid var(--unnamed, #fff);
+    }
+}
