--- a/src/shared/ui/select/select.module.scss
+++ b/src/shared/ui/select/select.module.scss
@@ -29,6 +29,10 @@
         font-weight: 600;
         line-height: 105%; 
         letter-spacing: -0.45px;
+        max-width: 240px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
 
     .arrow {
@@ -65,6 +69,30 @@
         &:hover {
             background: var(--unnamed, #CFE5FF);
             cursor: pointer;
+        }
+    }
+}
+
+@media screen and (max-width: 490px) {
+    .selectedOptionWrapper {
+        border: 2px solid #013878;
+        padding: 0px 19px 0px 20px;
+
+        .arrow {
+            width: 23px;
+            height: 13px;
+        }
+    }
+
+    .optionsList {
+        height: 268px;
+        overflow-y: auto;
+        padding-top: 15px;
+        padding-bottom: 15px;
+        border: 2px solid #013878;
+
+        .option {
+            padding: 2px 0 2px 24px; 
         }
     }
 }
