--- a/src/entities/support-chat/legal-advice/legal-advice.module.scss
+++ b/src/entities/support-chat/legal-advice/legal-advice.module.scss
@@ -12,6 +12,13 @@
     .adviceContent {
         margin: 0 15px;
         padding: 15px;
-        border: 3px solid var(--unnamed, #fff);
+        border: none;
+    }
+}
+
+@media screen and (max-height: 700px) {
+    .adviceContent {
+        max-height: 600px;
+        overflow-y: auto;
     }
 }
