--- a/src/app/styles/global.scss
+++ b/src/app/styles/global.scss
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@500;600&display=swap");
 @import "./exports";
+@import 'react-toastify/dist/ReactToastify.css';
 
 * {
   margin: 0;
