--- a/src/widgets/navigation/components/SignUpModal/SignUpModal.module.scss
+++ b/src/widgets/navigation/components/SignUpModal/SignUpModal.module.scss
@@ -87,3 +87,10 @@
         padding-right: 10px;
     }
 }
+
+@media screen and (max-height: 850px) {
+    .signUpModalContent {
+        overflow-y: scroll;
+        height: 683px;
+    }
+}
