--- a/src/widgets/navigation/components/SignInModal/SignInModal.module.scss
+++ b/src/widgets/navigation/components/SignInModal/SignInModal.module.scss
@@ -83,6 +83,8 @@
         width: auto;
         margin: 0 15px;
         padding: 25px 25px 55px 33px;
+        position: relative;
+        z-index: 11;
     }
 
     .signInButtons {
