--- a/src/entities/authorization/authorization-modal-layout/authorization-modal-layout.module.scss
+++ b/src/entities/authorization/authorization-modal-layout/authorization-modal-layout.module.scss
@@ -16,3 +16,37 @@
       cursor: pointer;
   }
 }
+
+.authModalTitle {
+    color: var(--unnamed, #013878);
+    font-weight: 600;
+    margin-bottom: 30px;
+
+    &__title {
+      font-size: 30px;
+      line-height: 90%; 
+      letter-spacing: -0.75px;
+      margin-bottom: 20px;
+    }
+
+    &__text {
+        font-size: 20px;
+        line-height: 105%;  
+        letter-spacing: -0.5px;
+        margin-bottom: 10px;
+    }
+}
+
+.inlineButton {
+  color: var(--unnamed, #FD7900);
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 105%; /* 21px */
+  letter-spacing: -0.5px;
+  cursor: pointer;
+  display: inline-block;
+
+  &:hover {
+      text-decoration: underline;
+  }
+}
