Страница обращений личного кабинета

--- a/src/shared/ui/select/select.module.scss
+++ b/src/shared/ui/select/select.module.scss
@@ -21,7 +21,7 @@
     align-items: center;
     justify-content: space-between;
     cursor: pointer;
-    margin-top: 7px;
+    // margin-top: 7px;
 
     .selectedOption {
         color: #013878;
