Слайс для обращений

--- a/src/pages/cabinet/appeals/appeals.module.scss
+++ b/src/pages/cabinet/appeals/appeals.module.scss
@@ -22,6 +22,7 @@
     display: flex;
     justify-content: space-between;
     margin-bottom: 51px;
+    column-gap: 16px;
 
     &__select {
         width: 70.984848485%;
