--- a/src/features/contact-form/contact-form.module.scss
+++ b/src/features/contact-form/contact-form.module.scss
@@ -63,6 +63,10 @@ textarea {
   height: 222px !important;
 }
 
+.checkboxWrapper {
+  margin-bottom: 20px;
+}
+
 @media screen and (max-width: 1439px) {
   .contactForm {
     height: auto;
