--- a/src/entities/authorization/authorization-modal-layout/authorization-modal-layout.module.scss
+++ b/src/entities/authorization/authorization-modal-layout/authorization-modal-layout.module.scss
@@ -50,3 +50,10 @@
       text-decoration: underline;
   }
 }
+
+@media screen and (max-width: 490px) {
+    .authModalContent {
+        padding: 50px 35px 30px 35px;
+        margin: 0 10px;
+    }
+}
