--- a/src/shared/ui/MyInput/MyInput.module.scss
+++ b/src/shared/ui/MyInput/MyInput.module.scss
@@ -9,13 +9,13 @@
   width: 100%;
   height: 70px;
   border: 3px solid $blue-color;
-  border-radius: 27px;
+  border-radius: 50px;
   color: $blue-color;
   font-size: 20px;
   font-weight: 600;
   padding: 25px 25px 25px 22px;
   outline: none;
-  margin-top: 7px;
+  // margin-top: 7px;
 
   &::placeholder {
     color: $blue-color;
@@ -52,6 +52,18 @@ textarea::-webkit-scrollbar-thumb {
   border-radius: 7px;
   background-color: #FD7900;
 }
+
+// === Error ===
+
+.inputError {
+    color: #FF1203;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 105%; /* 21px */
+    letter-spacing: -0.5px;
+    margin-left: 22px;
+}
+// === error ===
 
 @media screen and (min-width: 1024px) and (max-width: 1439px) {
   .myInput {
