--- a/src/shared/ui/select/select.module.scss
+++ b/src/shared/ui/select/select.module.scss
@@ -11,6 +11,19 @@
     margin-left: 20px;
 }
 
+// === error ===
+
+.selectError {
+    color: #FF1203;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 105%; /* 21px */
+    letter-spacing: -0.5px;
+    margin-left: 22px;
+}
+
+// === error ===
+
 .selectedOptionWrapper {
     width: 100%;
     height: 70px;
