--- a/src/features/contact-form/contact-form.module.scss
+++ b/src/features/contact-form/contact-form.module.scss
@@ -1,7 +1,7 @@
 @import "app/styles/exports";
 
 .contactForm {
-  height: 625px;
+  // height: 625px;
   border: 3px solid $blue-color;
   border-radius: 50px;
   background: $blueLinear-color;
@@ -25,16 +25,13 @@
   margin-bottom: 9px;
 
   &__input {
-    font-family: "Inter";
-    width: 100%;
-    height: 70px;
-    border: 3px solid $blue-color;
     border-radius: 30px;
-    color: $blue-color;
-    font-size: 20px;
-    font-weight: 600;
-    padding: 25px 25px 25px 22px;
-    outline: none;
+  }
+
+  &__textarea {
+    width: 100%;
+    height: 222px;
+    border-radius: 30px;
 
     &::placeholder {
       opacity: 0.4;
@@ -81,7 +78,7 @@ textarea {
 
   .contactInputs {
     row-gap: 10px;
-    &__input {
+    &__textarea {
       border-radius: 21px;
       padding: 15px;
     }
@@ -121,7 +118,7 @@ textarea {
   .contactInputs {
     row-gap: 12px;
 
-    &__input {
+    &__textarea {
       border-radius: 25px;
       padding: 19px;
       font-size: 18px;
@@ -150,7 +147,7 @@ textarea {
   .contactInputs {
     row-gap: 10px;
 
-    &__input {
+    &__textarea {
       border-radius: 20px;
       padding: 15px;
       font-size: 12px;
